--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-      <h1>Geim myndir</h1>
+      <h1>Geim-myndir</h1>
   </header>
   <main>
     <section class="apod">
